test/error/syntax/err4.rzy
// Error should be thrown for line 10 or/and 5
Err4 = Component
  evt : signal();
hfsm(A)
  A: state(B)
    B: state(C)
      C: state;
    end
  end
  A to A.C by evt();
end
  
